force-app/main/default/objects/ServiceTerritory/fields/OM_isOnline__c.field-meta.xml
<CustomField>
    <fullName>OM_isOnline__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si este territorio se trata de una oficina virtual (online)</description>
    <label>Oficina Online</label>
    <type>Checkbox</type>
</CustomField>