force-app/main/default/objects/ServiceTerritory/fields/OM_Language__c.field-meta.xml
<CustomField>
    <fullName>OM_Language__c</fullName>
    <label>Idioma</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ES</fullName>
                <label>Español</label>
            </value>
            <value>
                <fullName>CAT</fullName>
                <label>Catalán</label>
            </value>
            <value>
                <fullName>EN</fullName>
                <isActive>false</isActive>
                <label>EN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>