force-app/main/default/objects/ServiceTerritory/fields/OM_Office__c.field-meta.xml
<CustomField>
    <fullName>OM_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Territories</relationshipLabel>
    <relationshipName>Service_Territories</relationshipName>
    <type>Lookup</type>
</CustomField>